// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompts - progress (isCI = false) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠙  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ foo",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "▲  Something went wrong
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠙  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠹  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠸  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
]
`;

exports[`prompts - progress (isCI = false) > start > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ foo",
]
`;

exports[`prompts - progress (isCI = false) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
]
`;

exports[`prompts - progress (isCI = false) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "■  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "▲  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > stop > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "◇  foo
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "◇  foo.
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > stop > renders submit symbol and stops progress 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > style > renders block progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ██████████ ",
  "[1G",
  "[J",
  "⠙  ██████████ ",
  "[1G",
  "[J",
  "⠹  ██████████ ",
  "[1G",
  "[J",
  "⠸  ██████████ ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > style > renders heavy progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠙  ━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠹  ━━━━━━━━━━ ",
  "[1G",
  "[J",
  "⠸  ━━━━━━━━━━ ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = false) > style > renders light progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ────────── ",
  "[1G",
  "[J",
  "⠙  ────────── ",
  "[1G",
  "[J",
  "⠹  ────────── ",
  "[1G",
  "[J",
  "⠸  ────────── ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "⠙  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ foo...",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "▲  Something went wrong
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
]
`;

exports[`prompts - progress (isCI = true) > start > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ foo...",
]
`;

exports[`prompts - progress (isCI = true) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
]
`;

exports[`prompts - progress (isCI = true) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "■  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "▲  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > stop > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "◇  foo
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "◇  foo.
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > stop > renders submit symbol and stops progress 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > style > renders block progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ██████████ ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > style > renders heavy progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ━━━━━━━━━━ ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`prompts - progress (isCI = true) > style > renders light progressbar 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ────────── ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;
